--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/Savings-xDAI.svg" />
+    <link rel="icon" href="assets/Savings-xDAI.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="Gnosis Earn" content="Earn by Depositing xDAI" />
-    <link rel="apple-touch-icon" href="/sDAI.jpeg" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="assets/sDAI.jpeg" />
+    <link rel="manifest" href="./manifest.json" />
     <title>Gnosis Earn</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
