style: small adjustments to the footer paragraph and margins

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="assets/Savings-xDAI.svg" />
+    <link rel="icon" href="/Savings-xDAI.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="Gnosis Earn" content="Earn by Depositing xDAI" />
-    <link rel="apple-touch-icon" href="assets/sDAI.jpeg" />
+    <link rel="apple-touch-icon" href="/sDAI.jpeg" />
     <link rel="manifest" href="./manifest.json" />
     <title>Gnosis Earn</title>
   </head>
